Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-27310

[RocksDB] Stats names containing dots are not recognized in Mortimer expressions

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • master
    • master
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      E.g., 'ep_rocksdb_rocksdb.block.cache.data.hit' gives the following error when used in expressions:

      Warning: Identifier not recognised - ep_rocksdb_rocksdb on 172.23.96.117 in bucket-1
      

      Attachments

        For Gerrit Dashboard: MB-27310
        # Subject Branch Project Status CR V

        Activity

          People

            paolo.cocchi Paolo Cocchi
            paolo.cocchi Paolo Cocchi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty