MB-27310 [RocksDB] Remove dots from statistics names

Statistics names containing dots are not recognized in Mortimer
Expressions. To fix, we replace dot to underscore.

Change-Id: Ic0fb1cbdc8c4efa54fd0a9b58f80b19864bd4fbc
Reviewed-on: http://review.couchbase.org/86963
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>